update : cdn and readme

--- a/examples/native/index.html
+++ b/examples/native/index.html
@@ -22,7 +22,7 @@
 <body>
   <div id="pivot-table-container"></div>
 
-  <script src="../../dist/pivotTable.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/ranpivot-table@1.0.5/dist/pivotTable.js"></script>
   <script>
     const data = [
       {"Product": "Apple",  "World": "Earth-5", "Category": "Fruits", "Region": "North", "Month": "January", "Sales": 120},
